--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,11 +6,9 @@ sonar.projectName=Pres 2.0 Backend
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=./target/classes
 # Ignore Test classes from analysis
-sonar.exclusions=src/java/test/**, src/test/java/gov/cancer/ccr/oit/pres/**,src/main/java/gov/cancer/ccr/oit/pres/domain/**
+sonar.exclusions=src/java/test/**
 # Code Coverage
 sonar.junit.reportPaths=target/surefire-reports
 sonar.jacoco.reportPaths=target/jacoco.exec
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
-#### Use the following command to run and check for vulnerabilities and bugs. Get Sonar Qube Token from https://ccrod.cancer.gov/confluence/display/ccroitpublic/PRES+Credentials
-# mvn sonar:sonar -Dsonar.host.url=https://oitsonar.ccr.cancer.gov -Dsonar.login=<Token>
